[gd_scene load_steps=14 format=3 uid="uid://b2jrpgg8mnug"]

[ext_resource type="PackedScene" uid="uid://0rc4c6wrwk8a" path="res://player.tscn" id="1_6sv0l"]
[ext_resource type="Script" path="res://main.gd" id="1_8b17j"]
[ext_resource type="PackedScene" uid="uid://beyt7vvav8jw2" path="res://mob.tscn" id="2_fvk5n"]
[ext_resource type="Texture2D" uid="uid://dun8dw6msjrmd" path="res://art/background.webp" id="3_1emar"]
[ext_resource type="PackedScene" uid="uid://c1knb00ax4r0" path="res://hud.tscn" id="4_tovij"]
[ext_resource type="AudioStream" uid="uid://dkfupqnwjpkg5" path="res://music/alex.ogg" id="6_rnvrp"]
[ext_resource type="AudioStream" uid="uid://fi72koc2exqk" path="res://music/gameover.wav" id="7_b14pb"]
[ext_resource type="AudioStream" uid="uid://dlw8pt4ymdrbi" path="res://music/cat.ogg" id="8_uuyan"]
[ext_resource type="AudioStream" uid="uid://b2mx7g0ojexmo" path="res://music/house_in_a_forest.ogg" id="9_ghnxu"]
[ext_resource type="AudioStream" uid="uid://cx0xdgsfhg5t7" path="res://music/sharks.ogg" id="10_hhh83"]
[ext_resource type="AudioStream" uid="uid://cv7x03075c7yl" path="res://music/shrimp.ogg" id="10_wraj0"]
[ext_resource type="AudioStream" uid="uid://wiplow7ih5fu" path="res://music/jeremy.ogg" id="12_2jekh"]

[sub_resource type="Curve2D" id="Curve2D_cyfup"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1920, 8, 0, 0, 0, 0, 1928, 1096, 0, 0, 0, 0, -16, 1096, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_8b17j")
mob_scene = ExtResource("2_fvk5n")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 17554.0
offset_bottom = 4721.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.104138, 0.208335)
texture = ExtResource("3_1emar")

[node name="Player" parent="." instance=ExtResource("1_6sv0l")]
position = Vector2(992, 552)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(984, 552)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_cyfup")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = 0.00416664

[node name="HUD" parent="." instance=ExtResource("4_tovij")]

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(992, 552)

[node name="DeathSound" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_b14pb")

[node name="Music" type="AudioStreamPlayer2D" parent="."]

[node name="Sharks" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("10_hhh83")
parameters/looping = true

[node name="Shrimp" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("10_wraj0")

[node name="Music3" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("9_ghnxu")

[node name="Music2" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("8_uuyan")

[node name="Music1" type="AudioStreamPlayer2D" parent="Music"]
position = Vector2(992, 552)
stream = ExtResource("6_rnvrp")

[node name="Jeremy" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("12_2jekh")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="jeremy" from="HUD" to="." method="play_jeremy"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
